--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,60 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Website</title>
+<!DOCTYPE html>
+<html>
+
+<head lang="en">
+  <meta charset="UTF-8">
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--Page Title-->
+  <title>ePhoto</title>
+
+  <!--Meta Keywords and Description-->
+  <meta name="keywords" content="">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+
+  <!--Favicon-->
+  <link rel="shortcut icon" href="images/favicon.ico" title="Favicon" />
+
+
+
+  <!-- Animate CSS-->
+  <link href="assets/css/font-awesome.css" rel="stylesheet">
+
+  <!--Google Webfonts-->
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 </head>
+
 <body>
-  <app-root></app-root>
+
+  <app-root>
+
+    <!-- Preloader -->
+    <div id="preloader">
+      <div id="status" class="la-ball-triangle-path">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <!--End of Preloader-->
+
+  </app-root>
+
+  <!-- Include JavaScript resources -->
+  <script src="js/jquery.1.8.3.min.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script src="js/featherlight.min.js"></script>
+  <script src="js/featherlight.gallery.min.js"></script>
+  <script src="js/jquery.enllax.min.js"></script>
+  <script src="js/jquery.scrollUp.min.js"></script>
+  <script src="js/jquery.easing.min.js"></script>
+  <script src="js/jquery.stickyNavbar.min.js"></script>
+  <script src="js/jquery.waypoints.min.js"></script>
+  <script src="js/images-loaded.min.js"></script>
+  <script src="js/lightbox.min.js"></script>
+  <script src="js/site.js"></script>
+
 </body>
+
 </html>
